--- a/frontend/src/styles/components/Gallery.module.css
+++ b/frontend/src/styles/components/Gallery.module.css
@@ -2,7 +2,7 @@
   max-width: 80rem;
   /* max-w-7xl */
   margin: 0 auto;
-  padding: 6rem 1.5rem;
+  padding: 0rem 1.5rem;
   position: relative;
   z-index: 1;
 }
